Add RAG Vector, Graph, Hybrid Evaluation and Compare